--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 <marquee behavior:"alternating">sense</marquee>
 <h2>heopl mee</h2>
 <title> jaroupe moemr!!!</title>
+    <h2>j a rupee</h2>
+    <h3>you smell like a poopy</h3>
+    <h4>i bet you don't own</h4>
+    <h5>a single indian rupee</h5>
+    <h6>or equivalents</h6>
+    <h1>Kid Named Finger</h1>
+    <img src='Screenshot 2023-09-08 10.37.56 AM.png'>
 </body>
 </html>
 
