--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h6>or equivalents</h6>
     <h1>Kid Named Finger</h1>
     <img src='Screenshot 2023-09-08 10.37.56 AM.png'>
+    <button>fart gang buton</button>
 </body>
 </html>
 
