--- a/index.html
+++ b/index.html
@@ -3,6 +3,32 @@
 <head>
     <h1>1984</h1>
     <h4>i ial skp</h4>
+    <script>
+        function randAlert() {
+       let rand = Math.floor(Math.random());
+            if(rand=0) {
+                alert(fog)
+        } else if(rand=1) {
+                alert(aoalkajlil)
+            } else if(rand=2) {
+                alert(fjheelp)
+                } else if(rand=3) {
+                        alert(mroe fog) 
+            } else if(rand=4) {
+                alert(old)
+            } else if(rand=5) {
+                alert(fog)
+        } else if(rand=6) {
+                alert(aoalkajlil)
+            } else if(rand=7) {
+                alert(fjheelp)
+                } else if(rand=8) {
+                        alert(mroe fog) 
+            } else if(rand=9) {
+                alert(the ffog is ocnsujming me)
+            }
+            randAlert()
+   </script>
 </head>
 <body>
 <p>“Four score and seven years ago our fathers brought forth on this continent a new nation, conceived in liberty, and dedicated to the proposition that all men are created equal. “Now we are engaged in a great civil war, testing whether that nation, or any nation so conceived and so dedicated, can long endure. We are met on a great battlefield of that war. We have come to dedicate a portion of that field as a final resting place for those who here gave their lives that that nation might live. It is altogether fitting and proper that we should do this. “But in a larger sense we cannot dedicate, we cannot consecrate, we cannot hallow this ground. The brave men, living and dead, who struggled here have consecrated it, far above our poor power to add or detract. The world will little note, nor long remember, what we say here, but it can never forget what they did here. It is for us the living, rather, to be dedicated here to the unfinished work which they who fought here have thus far so nobly advanced. It is rather for us to be here dedicated to the great task remaining before us,that from these honored dead we take increased devotion to that cause for which they gave the last full measure of devotion, that we here highly resolve that these dead shall not have died in vain, that this nation, under God, shall have a new birth of freedom, and that government of the people, by the people, for the people, shall not perish from the earth.”</p>
@@ -20,7 +46,9 @@
     <h6>or equivalents</h6>
     <h1>Kid Named Finger</h1>
     <img src='Screenshot 2023-09-08 10.37.56 AM.png'>
-    <button>fart gang buton</button>
+   <script>
+       let
+   </script>
 </body>
 </html>
 
