--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
         function randAlert() {
        let rand = Math.floor(Math.random());
             if(rand=0) {
-                alert(fog)
+                alert('fog')
         } else if(rand=1) {
-                alert(aoalkajlil)
+                alert('aoalkajlil')
             } else if(rand=2) {
-                alert(fjheelp)
+                alert('fjheelp')
                 } else if(rand=3) {
-                        alert(mroe fog) 
+                        alert('mroe fog') 
             } else if(rand=4) {
-                alert(old)
+                alert('old')
             } else if(rand=5) {
-                alert(fog)
+                alert('fog')
         } else if(rand=6) {
-                alert(aoalkajlil)
+                alert('aoalkajlil')
             } else if(rand=7) {
-                alert(fjheelp)
+                alert('fjheelp')
                 } else if(rand=8) {
-                        alert(mroe fog) 
+                        alert('mroe fog') 
             } else if(rand=9) {
-                alert(the ffog is ocnsujming me)
+                alert('the ffog is ocnsujming me')
             }
-            randAlert()
+            randAlert();
    </script>
 </head>
 <body>
@@ -47,7 +47,7 @@
     <h1>Kid Named Finger</h1>
     <img src='Screenshot 2023-09-08 10.37.56 AM.png'>
    <script>
-       let
+       randAlert();
    </script>
 </body>
 </html>
